# 2025-spring-vk-ml

./: .gitignore  README.md  pyproject.toml
data/: data.ipynb
notebooks/: experiments.ipynb
