[project]
name = "2025-spring-vk-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
]
